<resources>
    <string name="app_name">New Westminster Mental Health Services</string>
    <string name="speak">Touch to Speak</string>
    <string name="call24">suicide hotline</string>
    <string name="searchText">Search</string>
    <string name="instructions">Press the button to put your words to text or input text yourself then press the search button</string>
    <string name="inputBox">write in speak to me</string>
    <string name="btn911call">CALL 911</string>
    <string name="BtnSuicidecall">CALL\nSUICIDE\nPREVENTION\nHOTLING</string>
    <string name="servicesList">Service List</string>
    <!--<string name="app_name">Mental Health Project</string>
    <string name="app_name">Mental Health Project</string>-->

</resources>
